[#23] Rework SCI comparison